Variables de entorno

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ MYSQL_PORT = 3306
 DB_NAME = farmacia_lopez
 
 # SYSTEM TOKEN
-TOKEN = cualquier token
+TOKEN = $2y$10$1lKObIJfpmuSmYLAUemixutE9Vxq1mP57UyYag/vhTwJR7jTiXmiS
