--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "mysql2-promise": "^0.1.4"
   },
   "scripts": {
-    "start": "node src/server",
-    "start dev": "nodemon src/server"
+    "start": "node src/server.js",
+    "start dev": "nodemon src/server.js"
   },
   "name": "api-sheyla",
   "version": "1.0.0",
